UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Request and response of each of the API calls made to/from this org.</description>
    <label>API Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>