UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/ConvertToXML__c.field-meta.xml
<CustomField>
    <fullName>ConvertToXML__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if request and response need to be converted to XML</description>
    <label>Convert to XML?</label>
    <type>Checkbox</type>
</CustomField>