UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>Error Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>