UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>