UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <description>The name of the interface for this log entry.</description>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>addChildServiceItem</fullName>
            </value>
            <value>
                <fullName>DPIOrderStatusUpdateService</fullName>
            </value>
            <value>
                <fullName>M6OrderStatusUpdateService</fullName>
            </value>
            <value>
                <fullName>GetM6ProvisioningDetails</fullName>
            </value>
            <value>
                <fullName>SubmitGroupOrderMember</fullName>
            </value>
            <value>
                <fullName>RetrieveCustomerFacilities</fullName>
            </value>
            <value>
                <fullName>findAvailableTelephoneNumbers</fullName>
            </value>
            <value>
                <fullName>CreateDSATTicket</fullName>
            </value>
            <value>
                <fullName>ReserveTelephoneNumber</fullName>
            </value>
            <value>
                <fullName>addServiceItem</fullName>
                <label>AddServiceItem</label>
            </value>
            <value>
                <fullName>createCustomerAccount</fullName>
            </value>
            <value>
                <fullName>createShellPSR</fullName>
                <label>CreateShellPSR</label>
            </value>
            <value>
                <fullName>submitPSR</fullName>
            </value>
            <value>
                <fullName>VoipQualification</fullName>
            </value>
            <value>
                <fullName>upsertOrder</fullName>
            </value>
            <value>
                <fullName>StageGroupOrderMember</fullName>
            </value>
            <value>
                <fullName>GetAssets</fullName>
                <label>GETAssets</label>
            </value>
            <value>
                <fullName>ValidateCircuit</fullName>
            </value>
            <value>
                <fullName>GetEntitlements</fullName>
            </value>
            <value>
                <fullName>DeleteEntitlements</fullName>
            </value>
            <value>
                <fullName>CreateEntitlements</fullName>
            </value>
            <value>
                <fullName>CBTSCreateOrder</fullName>
            </value>
            <value>
                <fullName>ESBEvent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>