UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/OrchestrationItemId__c.field-meta.xml
<CustomField>
    <fullName>OrchestrationItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Item</label>
    <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>