UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>