UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <description>Id of object the callout is related to</description>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>