UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M6</fullName>
                <default>true</default>
                <label>M6</label>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>DSAT</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>DataWareHouse</fullName>
                <label>Data WareHouse</label>
            </value>
            <value>
                <fullName>CBTS</fullName>
            </value>
            <value>
                <fullName>ESB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>