UCF-APR2.4/ftr main/force-app/main/default/objects/API_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>DocumentNumber__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Interface__c</columns>
    <columns>System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>